# ConnectaApp

./: README.md  main.py  pyproject.toml  run.py  security.py
routers/backend_api/: server.py
routers/frontend_api/: client.py
templates/: dashboard.html  login.html
