[project]
name = "connectaapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapy>=1.0.5",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
